feat: adding guards, removing exceptions inside state machine, improving consistency, adding transition selection